fixes the overflow-x bug on small screens caused by the rating star

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 
 .App__container {
   max-width: $lg;
-  padding: 20px;
+  padding: 21px;
   margin: auto;
 }
 
